# ChangeLog file for monetdb-java
# This file is updated with Maddlog

* Thu Feb 13 2025 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected the returned integer values of Statement methods
  getUpdateCount() and getLargeUpdateCount(). They returned -2 for
  DDL statements, which was not in compliance with the JDBC API
  documentation. Now they no longer return numbers smaller than -1.
- Corrected the returned integer values of Statement methods
  executeUpdate(...) and executeLargeUpdate(...) and PreparedStatement
  methods executeUpdate() and executeLargeUpdate(). They returned -2 for
  DDL statements, which was not in compliance with the JDBC API
  documentation. Now they no longer return negative numbers.

* Wed Feb 12 2025 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Fix a bug in DatabaseMetaData.getTables() where a provided string in the
  array of table types argument would contain a single quote or back slash.
  It was not escaped properly, resulting in an SQL syntax error.
- Fix missing escaping of single back slashes in string data provided to
  PreparedStatement methods setString(), setClob(), setObject() and setURL().

* Thu Jan 16 2025 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- The release version number has been bumped to 12.0 to avoid confusion
  with historic 11.x versions.
- Compiled and released new jar files: monetdb-jdbc-12.0.jre8.jar and
  jdbcclient.jre8.jar

* Wed Jan  8 2025 Joeri van Ruth <joeri.van.ruth@monetdbsolutions.com>
- The JDBC jar now includes JdbcClient. For backward compatibility the jar
  is still also available as jdbcclient.jreX.jar.

* Thu Nov  7 2024 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- In JdbcClient when running the \vsci or \vdbi or \vsi commands, we now
  suppress "42000 SELECT: insufficient privileges for ..." and
  "42000 SELECT: access denied for ..." error messages when the connected user